<resources>
    <string name="app_name">Health App</string>
    <string name="title_activity_maps">Map</string>
    <string name="medication">Medication</string>
    <string name="take_self_asessment">Take Self Asessment</string>
    <string name="nearby_covid_patients">Map Special Features</string>
    <string name="type_medication_here">Type Medication Here</string>
    <string name="upload">Upload</string>
    <string name="search_for_medication">Search for Medication</string>
    <string name="disease_name">Disease Name</string>
    <string name="close_quiz">Close Quiz</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="safe">Hurray You are Completely Safe!</string>
    <string name="mild">You have mild symptoms of Covid..!</string>
    <string name="critical">Please Get Tested Soon..! Critical Symptom match found</string>
    <string name="solution">Solution</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="enter">Enter</string>
    <string name="current_location_displayed_here">Current Location Displayed here</string>
    <string name="logout">Logout</string>
    <string name="helpfull">Helpful</string>
    <string name="not_helpfull">Not Helpful</string>
    <string name="background_process">Background Process:</string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="pick_image">Pick Image</string>
    <string name="medication_image">Medication Image</string>
</resources>