<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="56dp"
        android:text="@string/background_process"
        android:checked="true"
        android:textOff="OFF"
        android:textOn="ON"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        />


    <TextView
        android:id="@+id/cordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location_displayed_here"
        android:textStyle="italic"
         />


    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_medication"
        android:layout_below="@+id/cordinates"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_medicine"
        android:layout_below="@+id/check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_self_asessment"
        android:layout_below="@+id/medication"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />
    <Button
        android:id="@+id/patients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby_covid_patients"
        android:layout_below="@+id/quiz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/patients"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>